# solarark_monitor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  com.solar-monitor.plist  pyproject.toml  requirements.txt
src/solar_monitor/: __init__.py  __main__.py  alerts.py  analyze.py  backfill.py  database.py  forecast.py  monitor.py  weather.py  web.py
web/: index.html
widget/: SolarWidget  SolarWidget.swift
